WS_INTEGRATION/Sandbox/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Admin Responsibilities</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Monthly Integration</fullName>
        <description>The process for integrating the data from other systems into SF so KUIC may view the information.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Contact_Fails__c</fullName>
        <description>Number of Contacts that failed the upsert process.</description>
        <inlineHelpText>Number of Contacts that failed the upsert process.</inlineHelpText>
        <label>Contact Fails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Fails__c</fullName>
        <description>Number of engagements that failed the upsert</description>
        <inlineHelpText>Number of engagements that failed the upsert</inlineHelpText>
        <label>Engagement Fails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Contacts__c</fullName>
        <description>Number of Contacts that were inserted in this month&apos;s upsert.</description>
        <inlineHelpText>Number of Contacts that were inserted in this month&apos;s upsert.</inlineHelpText>
        <label>New Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Engagements__c</fullName>
        <description>Number of new Engagements that were inserted in this month&apos;s upsert</description>
        <inlineHelpText>Number of new Engagements that were inserted in this month&apos;s upsert</inlineHelpText>
        <label>New Engagements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Source_Orgs__c</fullName>
        <description>Number of Source Orgs that were inserted in this month&apos;s upsert.</description>
        <inlineHelpText>Number of Source Orgs that were inserted in this month&apos;s upsert.</inlineHelpText>
        <label>New Source Orgs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Internal_Source_Orgs__c</fullName>
        <description>Number of Source Orgs without an Organization Source Org ID</description>
        <inlineHelpText>Number of Source Orgs without an Organization Source Org ID</inlineHelpText>
        <label>Number of Internal Source Orgs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Received_Source_Orgs__c</fullName>
        <description>This is the number of Source Orgs KUIC received from other departments WITHIN KU.</description>
        <inlineHelpText>This is the number of Source Orgs KUIC received from other departments WITHIN KU.</inlineHelpText>
        <label>Number of Received Source Orgs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_Contacts__c</fullName>
        <description>Number of Contacts KUIC received from other departments WITHIN KU</description>
        <inlineHelpText>Number of Contacts KUIC received from other departments WITHIN KU</inlineHelpText>
        <label>Received Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_Engagements__c</fullName>
        <description>Number of Engagements KUIC received from other departments WITHIN KU</description>
        <inlineHelpText>Number of Engagements KUIC received from other departments WITHIN KU</inlineHelpText>
        <label>Received Engagements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Org_Fails__c</fullName>
        <description>Number of Source Orgs that failed the upsert</description>
        <inlineHelpText>Number of Source Orgs that failed the upsert</inlineHelpText>
        <label>Source Org Fails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Source_Orgs__c</fullName>
        <description>The current total number of source orgs</description>
        <label>Total Source Orgs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Change_Note</fullName>
        <active>true</active>
        <businessProcess>Admin Responsibilities</businessProcess>
        <description>Used by admins to denote changes in the system</description>
        <label>Change Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integration_Status</fullName>
        <active>true</active>
        <businessProcess>Monthly Integration</businessProcess>
        <description>Shows the status and historical data for the integration each month.</description>
        <label>Integration Status</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>